--- a/templates/index.html
+++ b/templates/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../css/style.css" />
     <title>Document</title>
   </head>
   <body>
     <h1>Hello world</h1>
+    <button><a href="/route-1"></a> Route 1</button>
+    <button><a href="/route-2"></a> Route 2</button>
+    <button><a href="/route-3"></a> Route 3</button>
   </body>
 </html>
