--- a/templates/route.html
+++ b/templates/route.html
@@ -8,7 +8,8 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Hello world</h1>
+    <h1>Ceci c'est la route {{route}}</h1>
+    <p>Explore les autres routes ici</p>
     <button><a href="/route-1"> Route 1</a></button>
     <button><a href="/route-2">Route 2 </a></button>
     <button><a href="/route-3">Route 3</a></button>
